--- a/rap.css
+++ b/rap.css
@@ -21,6 +21,7 @@ html{
 
 .mainbox{
     padding-left: 25%;
+    padding-right: 25%;
     font-size: 2.5vw;
     color: rgba(205, 205, 205, 0.711); 
     text-shadow: 0px 1px #7a7a7a;
@@ -37,11 +38,46 @@ html{
   text-align: center;
   font-size: 2.5vw;
   color: rgba(205, 205, 205, 0.711);   
-  padding-bottom: 10%;
+  padding-bottom: 1%;
   text-shadow: 0px 1px #7a7a7a;
 }
 
+.buttons{
+  width: 100%;
+  display: inline;
+}
 
+.buttons a {
+position: relative;
+display: inline-block;
+background-color: rgb(170, 0, 0); /*for compatibility with older browsers*/
+background-image: linear-gradient(rgb(161, 0, 0),rgb(182, 0, 0));
+  font-size: 1.5vw;
+/* text styles */
+text-decoration: none;
+color: #fff;
+font-family: sans-serif;
+font-weight: 100;
+  padding: 10%;
+  border-radius: 26px;
+  box-shadow: 0px 1px 4px -2px #333;
+  text-shadow: 0px -1px #333;
+}
+
+.buttons a:after{
+content: '';
+position: absolute;
+top: 2px;
+left: 2px;
+width: calc(100% - 4px);
+height: 50%;
+  border-radius: 13px;
+background: linear-gradient(rgba(251, 131, 131, 0.8), rgba(255, 92, 92, 0.2));
+}
+
+.button1{
+  width: 10%;
+}
 
 img{
     float: right;
