--- a/raps.css
+++ b/raps.css
@@ -19,18 +19,9 @@ html{
     color: #fff;
 }
 
-.mainbox{
-    padding-left: 5%;
-    padding-right: 5%;
-    font-size: 2.5vw;
-    color: rgba(205, 205, 205, 0.711); 
-    text-shadow: 0px 1px #7a7a7a;
-}
-
 .maintitle{
   text-align: center;
   color: rgba(255, 255, 255, 0.767);   
-  padding-top: 1%;
   text-shadow: 0px 1px #7a7a7a;
 }
 
@@ -38,8 +29,27 @@ html{
   text-align: center;
   font-size: 2.5vw;
   color: rgba(205, 205, 205, 0.711);   
-  padding-bottom: 1%;
+  padding-bottom: 5%;
   text-shadow: 0px 1px #7a7a7a;
+}
+
+.mainbox{
+  width: 100%;
+  font-size: 2.5vw;
+  color: rgba(205, 205, 205, 0.711); 
+  text-shadow: 0px 1px #7a7a7a;
+}
+
+.boxleft{
+  float: left;
+  width: 28%;
+  padding-left: 2%;
+}
+
+.boxright{
+  float: right;
+  width:68%;
+  padding-right: 2%;
 }
 
 .buttons{
